# RNA_ATAC

./: .gitignore  README.md  pyproject.toml  setup.py
src/a2g/: __init__.py  igv.py  meta.py  utils.py
