[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2g"
version = "0.1.0"
description = "A→G RNA editing analysis and IGV-like visualization tools"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Zhang Yitian", email = "12433093@mail.sustech.edu.cn" }
]

dependencies = [
  "pandas",
  "numpy",
  "pysam",
  "pyranges",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
